# OnomaTool

./: .gitignore  .gitmodules  ARCHITECTURE.md  AZURE_OPENAI_SETUP.md  CGPT_CODE_REVIEW.md  CHANGELOG.md  CLAUDE.md  FILETREE.md  GEMINI_CODE_REVIEW.md  LICENSE  MANIFEST.in  README.md  SPEC.md  TEST_SPECS.md  pyproject.toml  requirements.txt
.beads/: metadata.json
.github/workflows/: weekly-deps.yml
example_files/: note_0.md  note_1.md  note_2.md  note_4.md  note_5.md  note_6.md  resume_1.docx  resume_2.docx
reference/: ai_api_details.md
scripts/: build.sh  check-format.sh  test_install.sh
src/onomatool/: __init__.py  cli.py  config.py  conflict_resolver.py  constants.py  exceptions.py  file_collector.py  file_dispatcher.py  history.py  llm_integration.py  model_discovery.py  models.py  prompts.py  rename_orchestrator.py  renamer.py  sanitizer.py  suggestion_strategy.py
src/onomatool/processors/: __init__.py  markitdown_processor.py  text_processor.py
src/onomatool/utils/: encoding.py  image_utils.py
tests/: conftest.py  mock_config.toml  test_cli_flags.py  test_cli_model_commands.py  test_config.py  test_config_model.py  test_config_versioning.py  test_conflict_resolver.py  test_critical_paths.py  test_debug_directory.py  test_dryrun_fidelity.py  test_file_collector.py  test_file_dispatcher.py  test_file_filtering.py  test_filtering_sorting.py  test_format_override.py  test_gemini_vision.py  test_health_check.py  test_image_utils.py  test_llm_integration.py  test_llm_providers.py  test_logging.py  test_model_discovery.py  test_models.py  test_performance.py  test_plugin_system.py  test_processing_result.py  test_progress_batch.py  test_prompts.py  test_rename_orchestrator.py  test_renamer.py  test_retry_rate_limit.py  test_sanitizer.py  test_security.py  test_suggestion_strategies.py  test_text_processor.py  test_undo_system.py  test_usage_enduser.py  test_utf8_encoding.py
